- Fixed 0:00 by default in the miniplayer - Can now switch between list and art view on mobile

--- a/css/AlbumListingViewStyles.css
+++ b/css/AlbumListingViewStyles.css
@@ -1,7 +1,3 @@
-.DirectoryViewIcon, .AlbumSortIcon {
-	display: none;
-}
-
 .artistAlbumMain
 {
 	overflow: hidden;
